k8s/worker_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: task-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: baljitsingh06/worker_service:1.0
