k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: task-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: baljitsingh06/client:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: task-platform
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
