k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-platform-ingress
  namespace: task-platform

spec:
  rules:
    - host: task-platform.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: client

                port:
                  number: 3000

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend

                port:
                  number: 3001
